# Ecommerce-retention-ml-pipeline

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements.txt  streamlit_app.py  train_demo.py
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: base.yaml
models/: demo_bundle.pkl
notebooks/: 01_eda_customer_behavior.ipynb  README.md
scripts/: run_pipeline.py
src/: config.py
src/api/: main.py
src/data/: make_dataset.py
src/features/: build_features.py
src/inference/: predict.py
src/models/: evaluate.py  train.py
src/utils/: io.py
tests/: test_features.py
